[package]
name = "qllm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.9", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"
